--- a/article.html
+++ b/article.html
@@ -5,7 +5,8 @@
     <title>Article Exercise</title>
   </head>
 
-  <body>
+  <body class="articletext">
+      <li><a href="index.html">Home</a></li>
 <img src="artist-photo.jpg" alt="taika" class="taika">
 <h1>Taika Waititi</h1>
 <p>Filmmaker, actor, and writer Taika Waititi is responsible for some of the biggest films to emerge from New Zealand over the past decade. In both 2016's Hunt for the Wilderpeople and 2014's What We Do in the Shadows, Waititi mines comedy out of unexpected material and creates movies that defy easy categorization. As he finishes his first foray into big-budget Hollywood filmmaking—Thor: Ragnarok, due out later this year—Waititi opens up on what he finds funny and the various ways you can mine for laughs in your work.</p>
