--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Kom's Class Site</title>
-  </head>
-  <body>
-    Hello world!
-    <ul>
-<li><a href="index0.html">Article</a>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Kom's Class Site</title>
+  <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+  <div class="topbox">
+    <h1>Kom's Website</h1>
+  </div>
+  <p class="hi">Hi</p>
+  </div>
+  <ul>
+    <li><a href="article.html" class="article">Article</a>
+    <li><a href="poem.html" class="poem">Poem 1</a>
+  </ul>
+</body>
+
 </html>
