--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Kom's Class Site</title>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/pdu7iqa.css">
+
+
 
 </head>
 
