--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="main">
   <div class="topbox">
     <h1>Kom's Website</h1>
   </div>
@@ -20,7 +20,13 @@
   </div>
   <ul>
     <li><a href="article.html" class="article">Article</a>
-    <li><a href="poem.html" class="poem">Poem 1</a>
+      <h1>&nbsp;</h1>
+      </ul>
+  <p class="poemtitle">POEMS</p>
+<ul>
+    <li><a href="poem.html" class="poem">P1.1</a>
+    <li><a href="poem2.html" class="poem">P1.2</a>
+    <li><a href="poem3.html" class="poem">P1.3</a>
   </ul>
 </body>
 
