--- a/poem3.html
+++ b/poem3.html
@@ -6,7 +6,7 @@
       <li><a href="index.html">Home</a></li>
       <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="poemtext">
     <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; The Divine Image</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
