--- a/poem2.html
+++ b/poem2.html
@@ -6,7 +6,7 @@
       <li><a href="index.html">Home</a></li>
       <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="poemtext">
     <p>The Divine Image</p>
 
     <p>To Mercy, <br>Pity, <br>Peace, <br>and Love</p>
