--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <p class="hi">Hi</p>
   </div>
   <ul>
-    <li><a href="article.html" class="article">Article</a>
+    <li class="articlebutton"><a href="article.html" class="article">Article</a>
       <h1>&nbsp;</h1>
       </ul>
   <p class="poemtitle">POEMS</p>
 <ul>
-    <li><a href="poem.html" class="poem">P1.1</a>
-    <li><a href="poem2.html" class="poem">P1.2</a>
-    <li><a href="poem3.html" class="poem">P1.3</a>
+    <li class="poembutton"><a href="poem.html" class="poem p1">P1.1</a>
+    <li class="poembutton"><a href="poem2.html" class="poem p2" >P1.2</a>
+    <li class="poembutton"><a href="poem3.html" class="poem p3" >P1.3</a>
   </ul>
 </body>
 
