--- a/poem.html
+++ b/poem.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="poemtext">
-    <li><a href="index.html">Home</a></li>
+    <li class="poembutton"><a href="index.html">Home</a></li>
     <p>The Divine Image</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
