--- a/index.html
+++ b/index.html
@@ -18,16 +18,32 @@
   </div>
   <p class="hi">Hi</p>
   </div>
-  <ul>
-    <li class="articlebutton"><a href="article.html" class="article">Article</a>
-      <h1>&nbsp;</h1>
-      </ul>
-  <p class="poemtitle">POEMS</p>
-<ul>
-    <li class="poembutton"><a href="poem.html" class="poem p1">P1.1</a>
-    <li class="poembutton"><a href="poem2.html" class="poem p2" >P1.2</a>
-    <li class="poembutton"><a href="poem3.html" class="poem p3" >P1.3</a>
+  <!-- <ul>
+    <li> -->
+  <a href="article.html" class="article articlebutton">Article</a>
+      <!-- <h1>&nbsp;</h1> -->
+  <!-- </ul> -->
+  <div class="poemtitle">POEMS
+  <ul class="poemlist">
+    <li class="poembutton"><a href="poem1-1.html" class="poem p1-1">P1.1</a>
+    <li class="poembutton"><a href="poem1-2.html" class="poem p1-2">P1.2</a>
+    <li class="poembutton"><a href="poem1-3.html" class="poem p1-3">P1.3</a>
+    <li class="poembutton"><a href="poem2-1.html" class="poem p2-1">P2.1</a>
+    <li class="poembutton"><a href="poem2-2.html" class="poem p2-2">P2.2</a>
+    <li class="poembutton"><a href="poem2-3.html" class="poem p2-3">P2.3</a>
+    <li class="poembutton"><a href="poem3-1.html" class="poem p3-1">P3.1</a>
+    <li class="poembutton"><a href="poem3-2.html" class="poem p3-2">P3.2</a>
+    <li class="poembutton"><a href="poem3-3.html" class="poem p3-3">P3.3</a>
+    <li class="poembutton"><a href="poem4-1.html" class="poem p4-1">P4.1</a>
+    <li class="poembutton"><a href="poem4-2.html" class="poem p4-2">P4.2</a>
+    <li class="poembutton"><a href="poem4-3.html" class="poem p4-3">P4.3</a>
+    <li class="poembutton"><a href="poem5-1.html" class="poem p5-1">P5.1</a>
+    <li class="poembutton"><a href="poem5-2.html" class="poem p5-2">P5.2</a>
+    <li class="poembutton"><a href="poem5-3.html" class="poem p5-3">P5.3</a>
+
+
   </ul>
+</div>
 </body>
 
 </html>
