--- a/poem1-3.html
+++ b/poem1-3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Part 1</title>
-      <li class="poembutton"> <a href="index.html">Home</a></li>
+      <li class="homebutton"> <a href="index.html">Home</a></li>
       <link rel="stylesheet" href="style.css">
   </head>
   <body class="poemtext">
