--- a/poem3-2.html
+++ b/poem3-2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Part 3</title>
       <link rel="stylesheet" href="style0.css">
+      <li class="homebutton"><a href="index.html">Home</a></li>
   </head>
   <body>
     <h1>The Divine Image</h1>
