--- a/poem3-3.html
+++ b/poem3-3.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Part 3</title>
       <link rel="stylesheet" href="style00.css">
+      <li class="homebutton"><a href="index.html">Home</a></li>
   </head>
   <body>
     <h1><strong>The Divine Image</strong></h1>
