--- a/poem4-1.html
+++ b/poem4-1.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Part 3</title>
-      <link rel="stylesheet" href="style1.css">
+    <link href="https://fonts.googleapis.com/css?family=Jim+Nightshade&display=swap" rel="stylesheet">
+    <title>Part 4</title>
+      <link rel="stylesheet" href="style2.css">
       <li class="homebutton"><a href="index.html">Home</a></li>
   </head>
   <body>
@@ -12,36 +13,23 @@
     <p>All pray in their distress; </p>
     <p>And to these virtues of delight </p>
     <p>Return their thankfulness. </p>
-    <p>&nbsp;</p>
     <h3>To Mercy, Pity, Peace, and Love</h3>
     <p>Is God, our father dear,  </p>
     <h3>And Mercy, Pity, Peace, and Love</h3>
     <p>Is Man, his child and care.</p>
     <p>&nbsp;</p>
-    <ul style="list-style-type:none;">
-    <li>For Mercy has a human heart,</li>
-    <li>Pity a human face,</li>
-    <li>And Love, the human form divine,</li>
-    <li>And Peace, the human dress.</li>
-    </ul>
+    <p>For <span class="Mercy">Mercy</span> has a human heart,</p>
+    <p><span class="Pity">Pity</span> a human face,</p>
+    <p>And <span class="Love">Love</span> the human form divine,</p>
+    <p>And <span class="Peace">Peace</span> the human dress.</p>
     <p>&nbsp;</p>
     <p>Then every man, of every clime,</p>
     <p>That prays in his distress,</p>
     <p>Prays to the human form divine,</p>
     <h3>Love, Mercy, Pity, Peace.</h3>
-    <p>&nbsp;</p>
     <p>And all must love the human form,</p>
-    <p>In</p>
-      <ul style="list-style-type:none;">
-        <li>heathen,</li>
-        <li>Turk, </li>
-        <li>or Jew;</li>
-        </ul>
-          <p>&nbsp;</p>
-    <p>Where Mercy, Love, and Pity dwell</p>
-  <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <h3>There God </h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is dwelling too.</h3>
+    <p>In heathen,Turk,or Jew;</p>
+    <h3>Where Mercy, Love, and Pity dwell</h3>
+    <p>There God is dwelling too.</p>
   </body>
 </html>
