--- a/poem2-1.html
+++ b/poem2-1.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Part 2</title>
-    <li class="poembutton"><a href="index.html">Home</a></li>
+    <div class="buttons">
+        <link rel="stylesheet" href="style.css">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem1-3.html">Prev</a></li>
+    <li class="homebutton"><a href="poem2-2.html">Next</a></li>
+  </div>
   </head>
   <body>
     <h1>The Divine Image</h1>
