--- a/poem4-2.html
+++ b/poem4-2.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Part 4</title>
-    <li class="homebutton"> <a href="index.html">Home</a></li>
+    <div class="buttons">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem4-1.html">Prev</a></li>
+    <li class="homebutton"><a href="poem4-3.html">Next</a></li>
+  </div>
       <link rel="stylesheet" href="4-2style.css">
   </head>
   <body>
