--- a/poem5-1.html
+++ b/poem5-1.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Part 4</title>
       <link rel="stylesheet" href="5-1style.css">
+      <div class="buttons">
+      <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem4-3.html">Prev</a></li>
+      <li class="homebutton"><a href="poem5-2.html">Next</a></li>
+    </div>
   </head>
   <body>
     <div class="title"><h1>The Divine Image</h1></div>
