--- a/poem5-2.html
+++ b/poem5-2.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Part 5</title>
       <link rel="stylesheet" href="5-2style.css">
+      <div class="buttons">
+      <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem5-1.html">Prev</a></li>
+      <li class="homebutton"><a href="poem5-3.html">Next</a></li>
+    </div>
       <script>
         (function(d) {
           var config = {
@@ -17,14 +22,6 @@
   </head>
   <body>
     <div class="title"><h1>The Divine Image</h1></div>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-<p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
