--- a/poem1-1.html
+++ b/poem1-1.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Part 1</title>
     <link rel="stylesheet" href="style.css">
+    <div class="buttons">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem5-3.html">Prev</a></li>
+    <li class="homebutton"><a href="poem1-2.html">Next</a></li>
+  </div>
   </head>
   <body class="poemtext">
-    <li class="homebutton"><a href="index.html">Home</a></li>
     <p>The Divine Image</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
