--- a/poem1-2.html
+++ b/poem1-2.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Part 1</title>
-      <li class="homebutton"><a href="index.html">Home</a></li>
+    <div class="buttons">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem1-1.html">Prev</a></li>
+    <li class="homebutton"><a href="poem1-3.html">Next</a></li>
+  </div>
       <link rel="stylesheet" href="style.css">
+
   </head>
   <body class="poemtext">
     <p>The Divine Image</p>
