--- a/poem2-3.html
+++ b/poem2-3.html
@@ -3,6 +3,12 @@
 
 <head>
   <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <div class="buttons">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem2-2.html">Prev</a></li>
+    <li class="homebutton"><a href="poem3-1.html">Next</a></li>
+  </div>
   <title>Part 2</title>
 </head>
 
