--- a/poem3-1.html
+++ b/poem3-1.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Part 3</title>
-      <link rel="stylesheet" href="style1.css">
+      <link rel="stylesheet" href="3-1style.css">
+      <div class="buttons">
       <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem2-3.html">Prev</a></li>
+      <li class="homebutton"><a href="poem3-2.html">Next</a></li>
+    </div>
   </head>
   <body>
     <h1>The Divine Image</h1>
@@ -41,7 +45,7 @@
     <p>Where Mercy, Love, and Pity dwell</p>
   <p>&nbsp;</p>
     <p>&nbsp;</p>
-    <h3>There God </h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is dwelling too.</h3>
+    <h3 class="end">There God </h3>
+    <h3 class="end">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is dwelling too.</h3>
   </body>
 </html>
