--- a/poem3-2.html
+++ b/poem3-2.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Part 3</title>
-      <link rel="stylesheet" href="style0.css">
+      <link rel="stylesheet" href="3-2style.css">
+      <div class="buttons">
       <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem3-1.html">Prev</a></li>
+      <li class="homebutton"><a href="poem3-3.html">Next</a></li>
+    </div>
   </head>
   <body>
     <h1>The Divine Image</h1>
@@ -12,36 +16,25 @@
     <p>All pray in their distress; </p>
     <p>And to these virtues of delight </p>
     <p>Return their thankfulness. </p>
-<h5>&nbsp;</h5>
     <h3><small>To</small> Mercy, Pity, Peace, <small>and</small> Love</h3>
     <p>Is God, our father dear,  </p>
     <h3><small>And</small> Mercy, Pity, Peace, <small>and</small> Love</h3>
     <p>Is Man, <small>his child and care.</small></p>
-    <h5>&nbsp;</h5>
-    <ul style="list-style-type:none;">
+    <ul style="list-style-type:none;" class="firstlist">
     <li>For <strong>Mercy</strong> has a human heart,</li>
     <li><strong>Pity</strong> a human face,</li>
     <li>And <strong>Love,</strong> the human form divine,</li>
     <li>And <strong>Peace,</strong> the human dress.</li>
     </ul>
-    <h5>&nbsp;</h5>
     <p>Then every man, of every clime,</p>
     <p>That prays in his distress,</p>
     <p>Prays to the human form divine,</p>
     <h3>Love, Mercy, Pity, Peace.</h3>
-    <h5>&nbsp;</h5>
     <p>And all must love the human form,</p>
-    <p>In</p>
-      <ul style="list-style-type:none;">
-        <li>heathen,</li>
-        <li>Turk, </li>
-        <li>or Jew;</li>
-        </ul>
-          <h5>&nbsp;</h5>
+    <p>In heathen, Turk, or Jew;</p>
+<h5>&nbsp;</h5>
     <p>Where <strong>Mercy, Love, and Pity</strong> dwell</p>
-  <h5>&nbsp;</h5>
     <h5>&nbsp;</h5>
-    <h4>There God </h4>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is dwelling too.</h4>
+    <h4>There God is dwelling too.</h4>
   </body>
 </html>
