--- a/poem3-3.html
+++ b/poem3-3.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Part 3</title>
-      <link rel="stylesheet" href="style00.css">
+      <link rel="stylesheet" href="3-3style.css">
+      <div class="buttons">
       <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem3-2.html">Prev</a></li>
+      <li class="homebutton"><a href="poem4-1.html">Next</a></li>
+    </div>
   </head>
   <body>
     <h1><strong>The Divine Image</strong></h1>
@@ -22,24 +26,15 @@
     <li>And Love, <br>&nbsp;the human form divine,</li>
     <li>And Peace, <br>&nbsp;the human dress.</li></strong>
     </ul>
-    <p>&nbsp;</p>
     <p>Then every man, of every clime,</p>
     <p>That prays in his distress,</p>
     <p>Prays to the human form divine,</p>
     <h3>Love, Mercy, Pity, Peace.</h3>
-    <p>&nbsp;</p>
-    <p>And all must love the human form,</p>
-    <p>In</p>
-      <ul style="list-style-type:none;">
-        <li>heathen,</li>
-        <li>Turk, </li>
-        <li>or Jew;</li>
+    <p>And all must love the human form, in</p>
+      <p><strong>heathen, Turk, or Jew;
+      </strong>
         </ul>
-          <p>&nbsp;</p>
     <p>Where Mercy, Love, and Pity dwell</p>
-  <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <h3>There God </h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is dwelling too.</h3>
+    <h3 class="final">There God is dwelling too.</h3>
   </body>
 </html>
