--- a/poem4-1.html
+++ b/poem4-1.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Jim+Nightshade&display=swap" rel="stylesheet">
     <title>Part 4</title>
-      <link rel="stylesheet" href="style2.css">
+      <link rel="stylesheet" href="4-1style.css">
+      <div class="buttons">
       <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="poem3-3.html">Prev</a></li>
+      <li class="homebutton"><a href="poem4-2.html">Next</a></li>
+    </div>
   </head>
   <body>
     <h1>The Divine Image</h1>
