--- a/poem4-3.html
+++ b/poem4-3.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Part 5</title>
-    <li class="homebutton"> <a href="index.html">Home</a></li>
+    <div class="buttons">
+    <li class="homebutton"><a href="index.html">Home</a></li>
+    <li class="homebutton"><a href="poem4-2.html">Prev</a></li>
+    <li class="homebutton"><a href="poem5-1.html">Next</a></li>
+  </div>
       <link rel="stylesheet" href="4-3style.css">
       <link rel="stylesheet" href="https://use.typekit.net/pdu7iqa.css">
       <script>
