--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <!-- <ul>
     <li> -->
   <a href="article.html" class="article articlebutton">Article</a>
+  <a href="position.html" class="position positionbutton">Position Exercise</a>
+  <a href="animation.html" class="animation animationbutton">animation Exercise</a>
       <!-- <h1>&nbsp;</h1> -->
   <!-- </ul> -->
   <div class="poemtitle">POEMS
@@ -44,6 +46,7 @@
 
   </ul>
 </div>
+
 <img src="gear.png" alt="gear" class="gear">
 <p class="work">!WORK IN PROGRESS!</p>
 </body>
