--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
   </div>
   <p class="hi">Hi</p>
   </div>
+  <a href="portfolio.pdf">Portfolio</a>
   <!-- <ul>
     <li> -->
   <a href="article.html" class="article articlebutton">Article</a>
   <a href="position.html" class="position positionbutton">Position Exercise</a>
   <a href="animation.html" class="animation animationbutton">animation Exercise</a>
+  <div class="responsivenesstitle">RESPONSIVENESS EXERCISES
+  <ul class="responsivenesslist">
+    <li class="responsivenessbutton"><a href="responsiveness.html" class="Responsiveness 1">1</a></li>
+    <li class="responsivenessbutton"><a href="responsiveness2.html" class="Responsiveness 2">2</a></li>
+    <li class="responsivenessbutton"><a href="responsiveness3.html" class="responsiveness 3">3</a></li>
+</ul>
+  </div>
       <!-- <h1>&nbsp;</h1> -->
   <!-- </ul> -->
   <div class="poemtitle">POEMS
