--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <a href="portfolio.pdf">Portfolio</a>
   <!-- <ul>
     <li> -->
+    <a href="story/index.html" class="story storybutton">Story</a>
   <a href="article.html" class="article articlebutton">Article</a>
   <a href="position.html" class="position positionbutton">Position Exercise</a>
   <a href="animation.html" class="animation animationbutton">animation Exercise</a>
