--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   </div>
   <p class="hi">Hi</p>
   </div>
-  <a href="portfolio.pdf">Portfolio</a>
+  <a href="portfolio.pdf" class="portfoliobutton">Portfolio</a>
   <!-- <ul>
     <li> -->
     <a href="story/index.html" class="story storybutton">Story</a>
   <a href="article.html" class="article articlebutton">Article</a>
   <a href="position.html" class="position positionbutton">Position Exercise</a>
   <a href="animation.html" class="animation animationbutton">animation Exercise</a>
+  <a href="javascript/index.html" class="javascript javabutton">JavaScript Exercise</a>
   <div class="responsivenesstitle">RESPONSIVENESS EXERCISES
   <ul class="responsivenesslist">
     <li class="responsivenessbutton"><a href="responsiveness.html" class="Responsiveness 1">1</a></li>
