--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
   <!-- </ul> -->
   <div class="poemtitle">POEMS
   <ul class="poemlist">
-    <li class="poembutton"><a href="poem1-1.html" class="poem p1-1">P1.1</a>
-    <li class="poembutton"><a href="poem1-2.html" class="poem p1-2">P1.2</a>
-    <li class="poembutton"><a href="poem1-3.html" class="poem p1-3">P1.3</a>
-    <li class="poembutton"><a href="poem2-1.html" class="poem p2-1">P2.1</a>
-    <li class="poembutton"><a href="poem2-2.html" class="poem p2-2">P2.2</a>
-    <li class="poembutton"><a href="poem2-3.html" class="poem p2-3">P2.3</a>
-    <li class="poembutton"><a href="poem3-1.html" class="poem p3-1">P3.1</a>
-    <li class="poembutton"><a href="poem3-2.html" class="poem p3-2">P3.2</a>
-    <li class="poembutton"><a href="poem3-3.html" class="poem p3-3">P3.3</a>
-    <li class="poembutton"><a href="poem4-1.html" class="poem p4-1">P4.1</a>
-    <li class="poembutton"><a href="poem4-2.html" class="poem p4-2">P4.2</a>
-    <li class="poembutton"><a href="poem4-3.html" class="poem p4-3">P4.3</a>
-    <li class="poembutton"><a href="poem5-1.html" class="poem p5-1">P5.1</a>
-    <li class="poembutton"><a href="poem5-2.html" class="poem p5-2">P5.2</a>
-    <li class="poembutton"><a href="poem5-3.html" class="poem p5-3">P5.3</a>
+    <li class="poembutton"><a href="poem/poem1-1.html" class="poem p1-1">P1.1</a>
+    <li class="poembutton"><a href="poem/poem1-2.html" class="poem p1-2">P1.2</a>
+    <li class="poembutton"><a href="poem/poem1-3.html" class="poem p1-3">P1.3</a>
+    <li class="poembutton"><a href="poem/poem2-1.html" class="poem p2-1">P2.1</a>
+    <li class="poembutton"><a href="poem/poem2-2.html" class="poem p2-2">P2.2</a>
+    <li class="poembutton"><a href="poem/poem2-3.html" class="poem p2-3">P2.3</a>
+    <li class="poembutton"><a href="poem/poem3-1.html" class="poem p3-1">P3.1</a>
+    <li class="poembutton"><a href="poem/poem3-2.html" class="poem p3-2">P3.2</a>
+    <li class="poembutton"><a href="poem/poem3-3.html" class="poem p3-3">P3.3</a>
+    <li class="poembutton"><a href="poem/poem4-1.html" class="poem p4-1">P4.1</a>
+    <li class="poembutton"><a href="poem/poem4-2.html" class="poem p4-2">P4.2</a>
+    <li class="poembutton"><a href="poem/poem4-3.html" class="poem p4-3">P4.3</a>
+    <li class="poembutton"><a href="poem/poem5-1.html" class="poem p5-1">P5.1</a>
+    <li class="poembutton"><a href="poem/poem5-2.html" class="poem p5-2">P5.2</a>
+    <li class="poembutton"><a href="poem/poem5-3.html" class="poem p5-3">P5.3</a>
 
 
   </ul>
