--- a/poem/poem5-1.html
+++ b/poem/poem5-1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="buttons">
-      <li class="homebutton"><a href="index.html">Home</a></li>
+      <li class="homebutton"><a href="file:///Users/komk/Documents/GitHub/class-site/index.html">Home</a></li>
       <li class="homebutton"><a href="poem4-3.html">Prev</a></li>
       <li class="homebutton"><a href="poem5-2.html">Next</a></li>
     </div>
