--- a/Personal/index.html
+++ b/Personal/index.html
@@ -115,7 +115,7 @@
 
     <div class="button-web">
       <svg width="400px" viewBox="0 0 552.5 125.83" class="shape">
-        <a href="https://komkhojayori.com" class="menubutton slidefour">
+        <a href="test.html" class="menubutton slidefour">
           <polygon class="cls-1" points="0 0 426.67 0 552.5 125.83 0 125.83 0 0" />
 
           <text x="40%" y="55%" fill="#FFFFFF" text-anchor="middle" alignment-baseline="middle" class="menutext web">
@@ -124,7 +124,6 @@
           </text>
         </a>
       </svg>
-      <div class="box four">Lorem ipsum dolor sit amet...</div>
     </div>
 
   </div>
