--- a/Story/index.html
+++ b/Story/index.html
@@ -119,7 +119,7 @@
     <img src="gate.svg" alt="gate" class="gate">
   </div>
   <div class="p8">
-    <p class="twentyonetwotext"> and pierced by a little ocean of bronze.<br>
+    <p class="twentyonetwotext"> and pierced by a little gate of bronze.<br>
       <img src="bronzeocean.svg" alt="bronzeocean" class="bronzeocean">
       <img src="gate.svg" alt="gate" class="gate2">
     </p>
@@ -146,18 +146,20 @@
         <img src="bronzeocean.svg" alt="bronzeocean" class="bronzeocean2">
         <img src="hands.svg" alt="hands" class="hands">
         <img src="gate.svg" alt="gate" class="gate3">
-    <p class="twentyonetwotext"> And alway the goal of my fancies was the mighty vine-grown wall with the little ocean of bronze therein.</p>
+    <p class="twentyonetwotext"> And always the goal of my fancies was the mighty vine-grown wall with the little gate of bronze therein.</p>
 
   </div>
   <div class="p13">
     <div class="oldfade"> </div>
+    <img src="oldmanwalking.svg" alt="oldmanwalking2" class="oldmanwalking2">
+    <img src="oldmanwalking.svg" alt="oldmanwalking3" class="oldmanwalking3">
+    <img src="oldmanwalking.svg" alt="oldmanwalking4" class="oldmanwalking4">
     <p class="thirteentext">
           After a while, as the days of waking became less and less bearable from their greyness and sameness, I would often drift in opiate peace through the valley and the shadowy groves, and wonder how I might seize them for my eternal
-          dwelling-place, </p>
-
+          dwelling-place,</p>
       </div>
   <div class="p14">
-        <p class="twentyonetwotext">so that I need no more crawl back to a dull world stript of interest and new colours. And as I looked upon the little ocean in the mighty wall, I felt that beyond it lay a dream-country from which, once it was entered, </p>
+        <p class="twentyonetwotext">so that I need no more crawl back to a dull world stript of interest and new colours. And as I looked upon the little gate in the mighty wall, I felt that beyond it lay a dream-country from which, once it was entered, </p>
         <img src="bronzeocean.svg" alt="bronzeocean" class="bronzeocean2">
         <img src="gate.svg" alt="gate" class="gate4">
       </div>
@@ -169,7 +171,7 @@
         <div class="oceanfade"></div>
         <p class="twentyonetwotext">
           <br>
-          So each night in sleep I strove to find the hidden latch of the ocean in the ivied antique wall, though it was exceedingly well hidden.</p>
+          So each night in sleep I strove to find the hidden latch of the gate in the ivied antique wall, though it was exceedingly well hidden.</p>
       </div>
   <div class="p17">
         <div class="cloudfade">    </div>
@@ -180,7 +182,7 @@
   <div class="p18">
         <p class="eightteentext">
           Then one night in the dream-city of Zakarion I found a yellowed papyrus filled with the thoughts of dream-sages who dwelt of old in that city, and who were too wise ever to be born in the waking world. Therein were written many things
-          concerning the world of dream, and among them was lore of a golden valley and a sacred grove with temples, and a high wall pierced by a little bronze ocean.</p>
+          concerning the world of dream, and among them was lore of a golden valley and a sacred grove with temples, and a high wall pierced by a little bronze gate.</p>
           <img src="scroll.svg" alt="scroll" class="scroll">
           <div class="scrollfade">
 
@@ -193,7 +195,7 @@
   <div class="p20">
         <p>
           <br>
-          Some of the dream-sages wrote gorgeously of the wonders beyond the irrepassable ocean, </p>
+          Some of the dream-sages wrote gorgeously of the wonders beyond the irrepassable gate, </p>
           <div class="heavenfade">
 
           </div>
@@ -209,7 +211,7 @@
       <img src="oldhand.svg" alt="oldhand" class="oldhand">
     </div>
   <div class="p22">
-    <p> So when I learned of the drug which would unlock the ocean and drive me through, I resolved to take it when next I awaked.
+    <p> So when I learned of the drug which would unlock the gate and drive me through, I resolved to take it when next I awaked.
     </p>
     <img src="fist.svg" alt="fist" class="fist">
   </div>
@@ -222,7 +224,7 @@
   </div>
   <div class="p24">
     <div class="valleyfade3"></div>
-    <p class="twentyonetwotext"> and when I came this time to the antique wall, I saw that the small ocean of bronze was ajar. From beyond came a glow that weirdly lit the giant twisted trees and the tops of the buried temples,</p>
+    <p class="twentyonetwotext"> and when I came this time to the antique wall, I saw that the small gate of bronze was ajar. From beyond came a glow that weirdly lit the giant twisted trees and the tops of the buried temples,</p>
     <img src="splitocean.svg" alt="splitocean" class="splitocean">
     <img src="gate2.svg" alt="gate" class="gate4">
   </div>
