--- a/Story/index.html
+++ b/Story/index.html
@@ -209,11 +209,12 @@
       <p class="twentyonetwotext"> I knew not which to believe, yet longed more and more to cross for ever into the unknown land; for doubt and secrecy are the lure of lures, and no new horror can be more terrible than the daily torture of the commonplace.</p>
 
       <img src="oldhand.svg" alt="oldhand" class="oldhand">
+      <img src="oldhand.svg" alt="oldhand" class="oldhand2">
     </div>
   <div class="p22">
     <p> So when I learned of the drug which would unlock the gate and drive me through, I resolved to take it when next I awaked.
     </p>
-    <img src="fist.svg" alt="fist" class="fist">
+    <img src="tonic.svg" alt="tonic" class="tonic">
   </div>
   <div class="p23">
     <p>
@@ -239,7 +240,7 @@
           <div class="endfade"></div>
           <div class="heavenfade3"></div>
     <p>
-      But as the ocean swung wider and the sorcery of the drug and the dream pushed me through,</p>
+      But as the gate swung wider and the sorcery of the drug and the dream pushed me through,</p>
       <img src="oceansplit.gif" alt="oceansplit" class="oceansplit">
 
   </div>
