--- a/Story/index.html
+++ b/Story/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <a name="top"></a>
   <title>Ex Oblivione</title>
+
   <link rel="stylesheet" href="style.css">
   <script>
     (function(d) {
@@ -249,8 +251,12 @@
       <p class="finaltext"> I knew that all sights and glories were at an end; for in that new realm was neither land nor sea, but only the white void of unpeopled and illimitable space.</p>
   </div>
   <div class="p28">
+
       <p class="finaltext"> So, happier than I had ever dared hope to be, I dissolved again into that native infinity of crystal oblivion from which the daemon Life had called me for one brief and desolate hour.</p>
   </div>
+  <a href="#top" class="toparrow">
+  <img src="arrow.svg" alt="arrow" class="arrow">
+  </a>
 </body>
 
 </html>
