--- a/Story/index.html
+++ b/Story/index.html
@@ -193,6 +193,7 @@
   <div class="p19">
         <p> When I saw this lore, I knew that it touched on the scenes I had haunted, and I therefore read long in the yellowed papyrus.</p>
         <img src="eye.svg" alt="eye" class="eye">
+        <img src="eye.svg" alt="eye" class="eye2">
       </div>
   <div class="p20">
         <p>
